aw: Improve exception handling for shouldInterceptRequest.

In the prior implementation the exception was uncaught which
resulted in the lower level JNI layer failing a CHECK. This
resulted in the Java exception being logged to adb, but then
a second stack trace which was purely in native code. This
caused many developers to think the problem was in WebView.

This change eliminates the native crash by catching the exception,
rethrowing it on the UI thread, and also failing the resource
load.

TEST=Manual

Bug: 718929
Change-Id: I7dc4226e6f95023cc841a0fb23bcac33c330fd7d
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1742956
Commit-Queue: Chris Mumford <cmumford@google.com>
Reviewed-by: Richard Coles <torne@chromium.org>
Cr-Commit-Position: refs/heads/master@{#695304}